# FLENcognition

./: .gitignore  README.md  app.py  conv_for_infer.py  pyproject.toml  requirements.txt
flencognition/: __init__.py  __main__.py  conv_for_infer.py  core.py
